[project]
name = "yt-music-playlist-janitor"
version = "0.1.0"
description = "Find and clean duplicate songs in YouTube Music liked songs."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Andrew Gromyko" }
]
dependencies = []

[project.scripts]
yt-music-playlist-janitor = "playlist_janitor:cli"

[tool.setuptools]
py-modules = [
  "playlist_janitor"
]
packages = [
  "utils"
]
